# integraal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crates.js  help.html  index.css  index.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-documentation.md  3-enhancement.md  4-request.md  8-tracker.md  9-release.md
.github/workflows/: build.yml  coverage.yml  doc.yml  publish.yml  tests.yml
docs/: build.sh  index.html
examples/: Cargo.toml  README.md  anemometry.csv  montecarlo_method.rs  rectangle_method.rs  trapezoid_method.rs
examples/examples/: expression.rs  measurements.rs
examples/examples/montecarlo/: hardcoded.rs  integraal.rs
examples/examples/rectangle/: hardcoded.rs  integraal.rs
examples/examples/trapezoid/: hardcoded.rs
examples/montecarlo/: integraal.rs
examples/rectangle/: integraal.rs
examples/src/: lib.rs
examples/trapezoid/: integraal.rs
integraal/: Cargo.toml  all.html  enum.ComputeMethod.html  enum.DomainDescriptor.html  enum.FunctionDescriptor.html  enum.IntegraalError.html  index.html  sidebar-items.js  struct.Integraal.html  trait.Scalar.html
integraal/parameters/: enum.ComputeMethod.html  enum.DomainDescriptor.html  enum.FunctionDescriptor.html
integraal/src/: lib.rs  parameters.rs  traits.rs
integraal/src/structure/: definitions.rs  implementations.rs  mod.rs  tests.rs
integraal/src/structure/tests/: function_a.rs  function_c.rs  function_d.rs  function_e.rs  mod.rs
integraal/src/tests/: function_a.rs  function_b.rs  function_c.rs  function_d.rs  function_e.rs  incorrect.rs  mod.rs
integraal/structure/definitions/: enum.IntegraalError.html  struct.Integraal.html
integraal/traits/: trait.Scalar.html
search.desc/integraal/: integraal-desc-0-.js
src/: compute_unit.rs  functions.rs  kernels.rs  lib.rs  parameters.rs  runner.rs  structure.rs
src/integraal/: lib.rs.html  parameters.rs.html  traits.rs.html
src/integraal/structure/: definitions.rs.html  implementations.rs.html  mod.rs.html
src/structure/: definitions.rs  implementations.rs  tests.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/integraal/traits/: trait.Scalar.js
