[package]
name = "integraal"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://imrn99.github.io/integraal/"
repository = "https://github.com/imrn99/integraal"
readme = "README.md"
description = "Integral computation, done in Rust! "
categories = ["algorithms", "concurrency", "mathematics", "science"]
keywords = ["algorithms", "analysis", "integration", "numerical-analysis", "numerical-method"]
authors = ["Isaie Muron <github@imrn.fr>"]


# FEATURES

[features]
montecarlo = ["dep:rand"]

# DEPS

[dependencies]
rand = { version = "0.9.0-alpha.1", features = ["small_rng"], optional = true }

[build-dependencies]
rustversion = "1.0.15"

[dev-dependencies]
rand = { version = "0.9.0-alpha.1", features = ["small_rng"] }

# EXAMPLES

[[example]]
name = "rectangle_hardcoded"
path = "examples/rectangle/hardcoded.rs"

[[example]]
name = "rectangle_integraal"
path = "examples/rectangle/integraal.rs"

[[example]]
name = "trapezoid_hardcoded"
path = "examples/trapezoid/hardcoded.rs"

[[example]]
name = "trapezoid_integraal"
path = "examples/trapezoid/integraal.rs"

[[example]]
name = "montecarlo_hardcoded"
path = "examples/montecarlo/hardcoded.rs"
required-features = ["montecarlo"] # not necessary, but enabled for consistency

[[example]]
name = "montecarlo_integraal"
path = "examples/montecarlo/integraal.rs"
required-features = ["montecarlo"]