[package]
name = "integraal-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "Example of the Integraal crate"
categories = ["algorithms", "concurrency", "mathematics", "science"]
keywords = ["algorithms", "analysis", "integration", "numerical-analysis", "numerical-method"]

[dependencies]
integraal = { workspace = true, features = ["boole", "montecarlo", "romberg"] }
rand = { workspace = true, features = ["small_rng"] }

# EXAMPLES

[[example]]
name = "rectangle_hardcoded"
path = "examples/rectangle/hardcoded.rs"

[[example]]
name = "rectangle_integraal"
path = "examples/rectangle/integraal.rs"

[[example]]
name = "trapezoid_hardcoded"
path = "examples/trapezoid/hardcoded.rs"

[[example]]
name = "trapezoid_integraal"
path = "examples/trapezoid/integraal.rs"

[[example]]
name = "montecarlo_hardcoded"
path = "examples/montecarlo/hardcoded.rs"

[[example]]
name = "montecarlo_integraal"
path = "examples/montecarlo/integraal.rs"
