[package]
name = "integraal-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "Example of the Integraal crate"
categories = ["algorithms", "concurrency", "mathematics", "science"]
keywords = ["algorithms", "analysis", "integration", "numerical-analysis", "numerical-method"]

[dependencies]
integraal = { workspace = true, features = ["boole", "montecarlo", "romberg"] }

# EXAMPLES

[[example]]
name = "from_measurements"
path = "examples/measurements.rs"

[[example]]
name = "from_expression"
path = "examples/expression.rs"
