[package]
name = "integraal"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "Integral computation, done in Rust! "
categories = ["algorithms", "concurrency", "mathematics", "science"]
keywords = ["algorithms", "analysis", "integration", "numerical-analysis", "numerical-method"]


# FEATURES

[features]
montecarlo = ["dep:rand"]

# DEPS

[dependencies]
rand = { workspace = true, features = ["small_rng"], optional = true }

[build-dependencies]
rustversion.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"] }
