[package]
name = "integraal"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description = "Integral computation, done in Rust! "
categories = ["algorithms", "concurrency", "mathematics", "science"]
keywords = ["algorithms", "analysis", "integration", "numerical-analysis", "numerical-method"]


# FEATURES

[features]
boole = []                # gated because it is not implemented for all input kinds
montecarlo = ["dep:rand"] # gated because of additional dep
romberg = []              # gated because it is not implemented for all input kinds

# DEPS

[dependencies]
num-traits.workspace = true
rand = { workspace = true, features = ["small_rng"], optional = true }
thiserror.workspace = true

[build-dependencies]
rustversion.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"] }
